--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: passwordless-auth-backend
   
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/passwordless_auth}
+    url: ${JDBC_DATABASE_URL:${DATABASE_URL:jdbc:postgresql://localhost:5432/passwordless_auth}}
     username: ${DATABASE_USERNAME:auth_user}
     password: ${DATABASE_PASSWORD:auth_password}
     driver-class-name: org.postgresql.Driver
@@ -14,7 +14,6 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
   
   security:
